<resources>
    <string name="app_name">AppsPenjualan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="mobil_fragment">Mobil Fragment</string>
    <string name="add_motor">Add Motor</string>
    <string name="add_mobil">Add Mobil</string>
    <string name="motor">Motor</string>
    <string name="mobil">Mobil</string>
    <string name="history">History</string>
    <string name="tahun_kendaraan">Tahun Kendaraan</string>
    <string name="warna">Warna</string>
    <string name="harga">Harga</string>
    <string name="stock_barang">Stock Barang</string>
    <string name="mesin">Mesin</string>
    <string name="tipe_suspensi">Tipe Suspensi</string>
    <string name="tipe_transmisi">Tipe Transmisi</string>
    <string name="tambah_data_motor">Tambah Data Motor</string>
</resources>