<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Motor"
        android:icon="@drawable/ic_motorcycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/motor" />
    <item
        android:id="@+id/Mobil"
        android:icon="@drawable/ic_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/mobil" />
    <item
        android:id="@+id/History"
        android:icon="@drawable/ic_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/history" />
</menu>